[gd_scene load_steps=174 format=2]

[ext_resource path="res://Player/Assets/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Assets/elisOnAGoose_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/honk-sound.mp3" type="AudioStream" id=3]
[ext_resource path="res://Player/Assets/speedlines.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/elisOnAGoose_stage1_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/elisOnAGoose_stage2_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/nuke_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://Player/Assets/Nuke Sound Effect.mp3" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=67]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=68]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=69]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=70]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=71]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=72]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=73]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=74]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=75]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=76]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 200, 200, 200 )

[sub_resource type="AtlasTexture" id=77]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=78]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=79]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=80]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=81]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 400, 200, 200 )

[sub_resource type="AtlasTexture" id=82]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=83]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=84]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=85]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=86]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 600, 200, 200 )

[sub_resource type="AtlasTexture" id=87]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=88]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=89]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=90]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=91]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 800, 200, 200 )

[sub_resource type="AtlasTexture" id=92]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=93]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=94]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=95]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=96]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 1000, 200, 200 )

[sub_resource type="AtlasTexture" id=97]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=98]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=99]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=100]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=101]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 1200, 200, 200 )

[sub_resource type="AtlasTexture" id=102]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=103]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=104]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=105]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=106]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 1400, 200, 200 )

[sub_resource type="AtlasTexture" id=107]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=108]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=109]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=110]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=111]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 1600, 200, 200 )

[sub_resource type="AtlasTexture" id=112]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=113]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=114]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=115]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=116]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 1800, 200, 200 )

[sub_resource type="AtlasTexture" id=117]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=118]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=119]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=120]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=121]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 2000, 200, 200 )

[sub_resource type="AtlasTexture" id=122]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=123]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=124]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=125]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=126]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 2200, 200, 200 )

[sub_resource type="AtlasTexture" id=127]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=128]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=129]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=130]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=131]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 2400, 200, 200 )

[sub_resource type="AtlasTexture" id=132]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=133]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=134]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=135]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=136]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 2600, 200, 200 )

[sub_resource type="AtlasTexture" id=137]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=138]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=139]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=140]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=141]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 2800, 200, 200 )

[sub_resource type="AtlasTexture" id=142]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=143]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=144]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=145]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=146]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 3000, 200, 200 )

[sub_resource type="AtlasTexture" id=147]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=148]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=149]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=150]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=151]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 3200, 200, 200 )

[sub_resource type="AtlasTexture" id=152]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=153]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=154]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=155]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=156]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 3400, 200, 200 )

[sub_resource type="AtlasTexture" id=157]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=158]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=159]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=160]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=161]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 3600, 200, 200 )

[sub_resource type="AtlasTexture" id=162]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 0, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=163]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 200, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=164]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 400, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=165]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 600, 3800, 200, 200 )

[sub_resource type="AtlasTexture" id=166]
flags = 13
atlas = ExtResource( 7 )
region = Rect2( 800, 3800, 200, 200 )

[sub_resource type="SpriteFrames" id=167]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Shader" id=23]
code = "shader_type canvas_item;

uniform sampler2D noise_tex_normal;
uniform sampler2D noise_tex;
uniform float progress : hint_range(0.0, 1.0);
uniform float strength = 1.0;

// If your sprite doesn't have enough space and the explosion gets clipped, 
// you can uncomment this and adjust the scale
//void vertex() {
//	float scale = 3.0;
//	VERTEX *= scale;
//
//	UV *= scale;
//	UV -= (scale - 1.0) / 2.0;
//}

void fragment() {
	vec2 direction = texture(noise_tex_normal, UV).xy; // We're using normal map as direction
	direction -= 0.5; // Since our normal map is a texture, it ranges from 0.0 to 1.0...
	direction *= 2.0; // ...so we're going to make it range from -1.0 to 1.0.
	direction = direction * strength * progress;
	
	// UV for exploded texture
	vec2 tex_size = 1.0 / TEXTURE_PIXEL_SIZE; // Real texture size in pixels
	vec2 uv = floor(UV * tex_size) / (tex_size - 1.0); // Pixelate UV to snap pixels
	uv = uv - direction; // Distort UV
	
	// Texture with exploded UV
	vec4 tex = texture(TEXTURE, uv); 
	
	// Dissolve alpha
	float dissolve = texture(noise_tex, UV).x;
	dissolve = step(progress, dissolve);
	tex.a *= dissolve;
	
	// Border (in case the edge of your sprite stretches, otherwise you can remove this block)
	vec2 border_uv = uv * 2.0 - 1.0;
	border_uv = clamp(abs(border_uv), 0.0, 1.0);
	float border = max(border_uv.x, border_uv.y);
	border = ceil(1.0 - border);
	tex.a *= border;
	
	COLOR = tex;
}"

[sub_resource type="OpenSimplexNoise" id=24]
seed = 2
period = 0.1

[sub_resource type="NoiseTexture" id=25]
flags = 2
width = 112
height = 112
as_normalmap = true
noise = SubResource( 24 )

[sub_resource type="OpenSimplexNoise" id=26]
seed = 1
period = 0.1

[sub_resource type="NoiseTexture" id=27]
flags = 2
width = 112
height = 112
noise = SubResource( 26 )

[sub_resource type="ShaderMaterial" id=28]
shader = SubResource( 23 )
shader_param/progress = 0.0
shader_param/strength = 1.0
shader_param/noise_tex_normal = SubResource( 27 )
shader_param/noise_tex = SubResource( 25 )

[sub_resource type="AtlasTexture" id=22]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=20]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 0, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=21]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=5]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=6]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=7]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=8]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=9]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=10]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 0, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=11]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 112, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=12]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=13]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=14]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=15]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 0, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=16]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 112, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=17]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 224, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=18]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 336, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=19]
flags = 8
atlas = ExtResource( 2 )
region = Rect2( 448, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 0, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 112, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 0, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 112, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 224, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 336, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 448, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 112, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 448, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 0, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 112, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 224, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 336, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 448, 224, 112, 112 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": false,
"name": "fall",
"speed": 15.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": false,
"name": "fall_s1",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "fall_s2",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "jump_s1",
"speed": 15.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "jump_s2",
"speed": 15.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "walk_s1",
"speed": 15.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "walk_s2",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 52.0

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
script = ExtResource( 1 )

[node name="NukeSprites" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.25, -137.5 )
scale = Vector2( 2.13437, 2.225 )
frames = SubResource( 167 )
frame = 2

[node name="NukeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="YouDiedCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="YouDied" type="Label" parent="YouDiedCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "You Died"
align = 1
valign = 1

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 28 )
position = Vector2( 8.75, 8.75 )
frames = SubResource( 2 )
animation = "walk_s2"
frame = 11
playing = true
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RotTween" type="Tween" parent="."]

[node name="STween" type="Tween" parent="."]

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BufferJump" type="Timer" parent="."]
wait_time = 0.2

[node name="ForceJump" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -10.0
text = "State"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 0 )
current = true
zoom = Vector2( 1.1, 1.1 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.05
drag_margin_top = 1.0
drag_margin_right = 0.05

[node name="HonkSoundStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="SpeedLinesCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="SpeedLines" type="Sprite" parent="SpeedLinesCanvas"]
modulate = Color( 1, 1, 1, 0.133333 )
position = Vector2( 510, 329 )
scale = Vector2( 0.34975, 0.252 )
texture = ExtResource( 4 )

[node name="SpeedLinesRotation" type="Timer" parent="SpeedLinesCanvas"]
wait_time = 0.05
autostart = true

[node name="Timer" type="Timer" parent="SpeedLinesCanvas"]
autostart = true

[node name="HideSpeedLines" type="Timer" parent="SpeedLinesCanvas"]
wait_time = 12.0
one_shot = true

[node name="SpeedIncreaseTimer" type="Timer" parent="."]
autostart = true

[connection signal="animation_finished" from="NukeSprites" to="." method="_on_NukeSprites_animation_finished"]
[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="BufferJump" to="." method="_on_BufferJump_timeout"]
[connection signal="timeout" from="ForceJump" to="." method="_on_ForceJump_timeout"]
[connection signal="timeout" from="SpeedLinesCanvas/SpeedLinesRotation" to="." method="_on_SpeedLinesRotation_timeout"]
[connection signal="timeout" from="SpeedLinesCanvas/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpeedLinesCanvas/HideSpeedLines" to="." method="_on_HideSpeedLines_timeout"]
[connection signal="timeout" from="SpeedIncreaseTimer" to="." method="_on_SpeedIncreaseTimer_timeout"]
